native/comrak_bridge/flark_comrak_bridge.h

typedef struct FlarkV3HostHandle {
  uint32_t slot;
  uint32_t generation;
} FlarkV3HostHandle;
typedef struct FlarkV3HostConfig {
  uint32_t abi_version;
  uint32_t struct_size;
  uint32_t document_session[4];
  uint32_t grammar_revision;
  uint32_t syntax_profile;
  uint32_t authority_mask;
  uint32_t maximum_query_bytes;
  uint32_t reserved[4];
} FlarkV3HostConfig;
typedef struct FlarkV3HostSourceVersion {
  uint32_t document_session[4];
  uint32_t revision;
  uint32_t utf8_length;
  uint32_t utf16_length;
  uint32_t content_hash128[4];
} FlarkV3HostSourceVersion;
typedef struct FlarkV3HostOfferBegin {
  uint32_t offer_id[4];
  uint32_t publication_session[4];
  uint32_t target_host_revision;
  FlarkV3HostSourceVersion source_version;
  /* Canonical Dart word order: highWord, lowWord. */
  uint32_t source_root[2];
  uint32_t parse_generation;
  uint32_t grammar_revision;
  uint32_t syntax_profile;
  uint32_t authority_mask;
  uint32_t transferred_record_count;
  uint32_t target_record_count;
  uint32_t maximum_frame_count;
  uint32_t maximum_encoded_frame_bytes;
  uint32_t maximum_packet_bytes;
  uint32_t maximum_frame_bytes;
  uint32_t maximum_program_children;
  uint32_t reserved[3];
} FlarkV3HostOfferBegin;
typedef struct FlarkV3HostCommitRequest {
  uint32_t offer_id[4];
  uint32_t actual_frame_count;
  uint32_t actual_encoded_frame_bytes;
  uint32_t rolling_transport_digest[4];
  uint32_t canonical_stream_digest[4];
} FlarkV3HostCommitRequest;
typedef struct FlarkV3HostStructuralAck {
  uint32_t publication_session[4];
  uint32_t host_revision;
  FlarkV3HostSourceVersion source_version;
  /* Canonical Dart word order: highWord, lowWord. */
  uint32_t source_root[2];
  uint32_t parse_generation;
  uint32_t grammar_revision;
  uint32_t syntax_profile;
  uint32_t authority_mask;
  uint32_t record_count;
  uint32_t sequence_digest[4];
  uint32_t manifest_digest[4];
} FlarkV3HostStructuralAck;
typedef struct FlarkV3HostInlineSidecarBegin {
  uint32_t schema;
  uint32_t mode;
  uint32_t offer_id[4];
  uint32_t publication_session[4];
  FlarkV3HostStructuralAck base_ack;
  FlarkV3HostInlineSidecarBinding binding;
  uint32_t hio1_encoded_bytes;
  uint32_t ipr2_descriptor_bytes;
  uint32_t transferred_node_count;
  FlarkV3HostInlineSidecarDisposition sidecar_disposition;
  uint32_t hio1_envelope_digest256[8];
  uint32_t maximum_frame_count;
  uint32_t maximum_encoded_frame_bytes;
  uint32_t maximum_packet_bytes;
  uint32_t maximum_frame_bytes;
  uint32_t maximum_program_children;
} FlarkV3HostInlineSidecarBegin;
typedef struct FlarkV3HostInlineSidecarCommitRequest {
  uint32_t offer_id[4];
  uint32_t actual_frame_count;
  uint32_t actual_encoded_frame_bytes;
  uint32_t rolling_transport_digest[4];
  uint32_t root_stream_digest[4];
} FlarkV3HostInlineSidecarCommitRequest;
typedef struct FlarkV3HostInlineSidecarAck {
  uint32_t publication_session[4];
  FlarkV3HostStructuralAck base_ack;
  FlarkV3HostU64 refinement_generation;
  FlarkV3HostU64 block_ordinal;
  uint32_t transferred_node_count;
  uint32_t disposition;
  uint32_t hio1_envelope_digest256[8];
  uint32_t root_stream_digest[4];
} FlarkV3HostInlineSidecarAck;
typedef struct FlarkV3HostInlineSidecarPollReceipt {
  uint32_t rejection_reason;
  uint32_t outcome;
  uint32_t offer_id[4];
  uint32_t next_frame_ordinal;
  FlarkV3HostInlineSidecarAck ack;
} FlarkV3HostInlineSidecarPollReceipt;
typedef struct FlarkV3HostInlineSidecarQuery {
  uint32_t schema;
  uint32_t struct_size;
  FlarkV3HostInlineSidecarBinding binding;
  uint32_t maximum_encoded_bytes;
  uint32_t reserved[3];
} FlarkV3HostInlineSidecarQuery;
typedef struct FlarkV3HostInlineSidecarQueryReceipt {
  uint32_t rejection_reason;
  uint32_t outcome;
  uint32_t reason;
  uint32_t encoded_bytes;
  uint32_t fact_count;
  uint32_t tree_nodes_visited;
  uint32_t value_entry_count;
  uint32_t value_encoded_bytes;
} FlarkV3HostInlineSidecarQueryReceipt;
typedef struct FlarkV3HostViewportPresentationBegin {
  uint32_t schema;
  uint32_t mode;
  uint32_t offer_id[4];
  uint32_t publication_session[4];
  FlarkV3HostStructuralAck base_ack;
  FlarkV3HostViewportPresentationBinding binding;
  FlarkV3HostViewportPresentationEnvelope envelope;
  FlarkV3HostViewportPresentationQueryLimits query_limits;
  FlarkV3HostViewportPresentationOfferLimits limits;
} FlarkV3HostViewportPresentationBegin;
typedef struct FlarkV3HostViewportPresentationCommitRequest {
  uint32_t offer_id[4];
  uint32_t actual_frame_count;
  uint32_t actual_encoded_frame_bytes;
  uint32_t rolling_transport_digest[4];
  uint32_t aggregate_root_stream_digest[4];
} FlarkV3HostViewportPresentationCommitRequest;
typedef struct FlarkV3HostViewportPresentationAck {
  uint32_t publication_session[4];
  FlarkV3HostStructuralAck base_ack;
  FlarkV3HostViewportPresentationBinding binding;
  FlarkV3HostViewportPresentationEnvelope envelope;
  uint32_t actual_frame_count;
  uint32_t actual_encoded_frame_bytes;
  uint32_t aggregate_root_stream_digest[4];
} FlarkV3HostViewportPresentationAck;
typedef struct FlarkV3HostViewportPresentationPollReceipt {
  uint32_t rejection_reason;
  uint32_t outcome;
  uint32_t offer_id[4];
  uint32_t next_frame_ordinal;
  FlarkV3HostViewportPresentationAck ack;
} FlarkV3HostViewportPresentationPollReceipt;
typedef struct FlarkV3HostViewportPresentationQuery {
  uint32_t schema;
  uint32_t struct_size;
  FlarkV3HostViewportPresentationAck ack;
  uint32_t maximum_encoded_bytes;
  uint32_t reserved[3];
} FlarkV3HostViewportPresentationQuery;
typedef struct FlarkV3HostViewportPresentationQueryReceipt {
  uint32_t rejection_reason;
  uint32_t outcome;
  uint32_t encoded_bytes;
  uint32_t entry_count;
  uint32_t reserved[4];
} FlarkV3HostViewportPresentationQueryReceipt;
typedef struct FlarkV3HostCallReceipt {
  uint32_t rejection_reason;
} FlarkV3HostCallReceipt;
typedef struct FlarkV3HostWorkGrant {
  uint32_t inspect_bytes;
  uint32_t copy_bytes;
  uint32_t transitions;
} FlarkV3HostWorkGrant;
typedef struct FlarkV3HostPollReceipt {
  uint32_t rejection_reason;
  uint32_t outcome;
  uint32_t offer_id[4];
  uint32_t next_frame_ordinal;
  FlarkV3HostStructuralAck ack;
} FlarkV3HostPollReceipt;
typedef struct FlarkV3HostId128 {
  uint32_t words[4];
} FlarkV3HostId128;
typedef struct FlarkV3HostPointQuery {
  uint32_t schema;
  uint32_t struct_size;
  FlarkV3HostSourceVersion source_version;
  uint32_t position_utf8;
  uint32_t position_utf16;
  uint32_t affinity;
  uint32_t maximum_encoded_bytes;
  uint32_t maximum_open_depth;
  uint32_t maximum_leaf_count;
  uint32_t maximum_tree_nodes_visited;
  uint32_t reserved[4];
} FlarkV3HostPointQuery;
typedef struct FlarkV3HostPointQueryReceipt {
  uint32_t rejection_reason;
  uint32_t outcome;
  uint32_t gap_reason;
  uint32_t encoded_bytes;
  uint32_t leaf_count;
  uint32_t open_depth;
  uint32_t tree_nodes_visited;
  uint32_t summary_nodes_skipped;
  uint32_t range_start_utf8;
  uint32_t range_start_utf16;
  uint32_t range_end_utf8;
  uint32_t range_end_utf16;
  FlarkV3HostSourceVersion source_version;
  uint32_t reserved[5];
} FlarkV3HostPointQueryReceipt;
typedef struct FlarkV3HostBlockRangeQuery {
  uint32_t schema;
  uint32_t struct_size;
  FlarkV3HostSourceVersion source_version;
  uint32_t requested_start_utf8;
  uint32_t requested_start_utf16;
  uint32_t requested_end_utf8;
  uint32_t requested_end_utf16;
  uint32_t maximum_encoded_bytes;
  uint32_t maximum_block_count;
  uint32_t maximum_storage_pages_visited;
  uint32_t maximum_open_depth;
  uint32_t maximum_tree_nodes_visited;
  uint32_t continuation_length;
  uint8_t continuation[FLARK_V3_HOST_BLOCK_RANGE_CONTINUATION_BYTES];
  uint32_t reserved[4];
} FlarkV3HostBlockRangeQuery;
typedef struct FlarkV3HostBlockRangeQueryReceipt {
  uint32_t rejection_reason;
  uint32_t outcome;
  uint32_t gap_reason;
  uint32_t encoded_bytes;
  uint32_t block_count;
  uint32_t storage_pages_visited;
  uint32_t open_depth;
  uint32_t tree_nodes_visited;
  uint32_t packed_entries_inspected;
  uint32_t summary_nodes_skipped;
  uint32_t flags;
  uint32_t coverage_start_utf8;
  uint32_t coverage_start_utf16;
  uint32_t coverage_end_utf8;
  uint32_t coverage_end_utf16;
  FlarkV3HostSourceVersion source_version;
  uint32_t continuation_length;
  uint8_t continuation[FLARK_V3_HOST_BLOCK_RANGE_CONTINUATION_BYTES];
  uint32_t reserved[4];
} FlarkV3HostBlockRangeQueryReceipt;
typedef struct FlarkV3HostStructuralOrdinalWindowQuery {
  uint32_t schema;
  uint32_t struct_size;
  FlarkV3HostSourceVersion source_version;
  FlarkV3HostU64 start_entry_ordinal;
  uint32_t maximum_entries;
  uint32_t maximum_storage_pages_visited;
  uint32_t maximum_tree_nodes_visited;
  uint32_t maximum_packed_entries_inspected;
  uint32_t reserved[4];
} FlarkV3HostStructuralOrdinalWindowQuery;
typedef struct FlarkV3HostStructuralOrdinalWindowQueryReceipt {
  uint32_t rejection_reason;
  uint32_t outcome;
  uint32_t failure_reason;
  uint32_t flags;
  FlarkV3HostU64 total_entry_count;
  FlarkV3HostU64 start_entry_ordinal;
  FlarkV3HostU64 next_entry_ordinal;
  uint32_t start_utf8;
  uint32_t start_utf16;
  uint32_t next_utf8;
  uint32_t next_utf16;
  uint32_t storage_pages_visited;
  uint32_t tree_nodes_visited;
  uint32_t packed_entries_inspected;
  uint32_t summary_nodes_skipped;
  FlarkV3HostSourceVersion source_version;
  uint32_t reserved[4];
} FlarkV3HostStructuralOrdinalWindowQueryReceipt;
uint32_t flark_v3_host_native_abi_version(void);
uint32_t flark_v3_host_config_standard(FlarkV3HostConfig* out_config);
uint32_t flark_v3_host_create(
    const FlarkV3HostConfig* config,
    FlarkV3HostHandle* out_handle);
uint32_t flark_v3_host_observe_source(
    FlarkV3HostHandle handle,
    const FlarkV3HostSourceVersion* source,
    FlarkV3HostCallReceipt* out_receipt);
uint32_t flark_v3_host_begin_offer(
    FlarkV3HostHandle handle,
    const FlarkV3HostOfferBegin* begin,
    FlarkV3HostCallReceipt* out_receipt);
uint32_t flark_v3_host_begin_inline_sidecar_offer(
    FlarkV3HostHandle handle,
    const FlarkV3HostInlineSidecarBegin* begin,
    FlarkV3HostCallReceipt* out_receipt);
uint32_t flark_v3_host_begin_viewport_presentation_offer(
    FlarkV3HostHandle handle,
    const FlarkV3HostViewportPresentationBegin* begin,
    FlarkV3HostCallReceipt* out_receipt);
/* Begins an exact-base delta that reuses only the canonical References root
 * authenticated by base_ack. All target wrappers and the manifest are fresh. */
uint32_t flark_v3_host_begin_references_delta(
    FlarkV3HostHandle handle,
    const FlarkV3HostOfferBegin* begin,
    const FlarkV3HostStructuralAck* base_ack,
    FlarkV3HostCallReceipt* out_receipt);
/* Begins a typed exact-base e4/e5 delta authenticated by base_ack. Canonical
 * References are reused and persistent SourceFacts are replayed before the
 * host admits ordinary target nodes. */
uint32_t flark_v3_host_begin_exact_base_delta(
    FlarkV3HostHandle handle,
    const FlarkV3HostOfferBegin* begin,
    const FlarkV3HostStructuralAck* base_ack,
    FlarkV3HostCallReceipt* out_receipt);
/* packet points at exact FPK3 bytes and may be null only when packet_length is
 * zero. The packet and receipt ranges must be disjoint. */
uint32_t flark_v3_host_admit_packet(
    FlarkV3HostHandle handle,
    const uint8_t* packet,
    uint32_t packet_length,
    FlarkV3HostCallReceipt* out_receipt);
uint32_t flark_v3_host_admit_inline_sidecar_packet(
    FlarkV3HostHandle handle,
    const uint8_t* packet,
    uint32_t packet_length,
    FlarkV3HostCallReceipt* out_receipt);
uint32_t flark_v3_host_admit_viewport_presentation_packet(
    FlarkV3HostHandle handle,
    const uint8_t* packet,
    uint32_t packet_length,
    FlarkV3HostCallReceipt* out_receipt);
uint32_t flark_v3_host_request_commit(
    FlarkV3HostHandle handle,
    const FlarkV3HostCommitRequest* request,
    FlarkV3HostCallReceipt* out_receipt);
uint32_t flark_v3_host_request_inline_sidecar_commit(
    FlarkV3HostHandle handle,
    const FlarkV3HostInlineSidecarCommitRequest* request,
    FlarkV3HostCallReceipt* out_receipt);
uint32_t flark_v3_host_request_viewport_presentation_commit(
    FlarkV3HostHandle handle,
    const FlarkV3HostViewportPresentationCommitRequest* request,
    FlarkV3HostCallReceipt* out_receipt);
uint32_t flark_v3_host_abort_offer(
    FlarkV3HostHandle handle,
    const FlarkV3HostId128* offer_id,
    FlarkV3HostCallReceipt* out_receipt);
uint32_t flark_v3_host_abort_inline_sidecar_offer(
    FlarkV3HostHandle handle,
    const FlarkV3HostId128* offer_id,
    FlarkV3HostCallReceipt* out_receipt);
uint32_t flark_v3_host_abort_viewport_presentation_offer(
    FlarkV3HostHandle handle,
    const FlarkV3HostId128* offer_id,
    FlarkV3HostCallReceipt* out_receipt);
uint32_t flark_v3_host_poll(
    FlarkV3HostHandle handle,
    FlarkV3HostWorkGrant grant,
    FlarkV3HostPollReceipt* out_receipt);
uint32_t flark_v3_host_poll_inline_sidecar(
    FlarkV3HostHandle handle,
    FlarkV3HostWorkGrant grant,
    FlarkV3HostInlineSidecarPollReceipt* out_receipt);
uint32_t flark_v3_host_poll_viewport_presentation(
    FlarkV3HostHandle handle,
    FlarkV3HostWorkGrant grant,
    FlarkV3HostViewportPresentationPollReceipt* out_receipt);
uint32_t flark_v3_host_acknowledge_delivery(
    FlarkV3HostHandle handle,
    const FlarkV3HostStructuralAck* ack,
    FlarkV3HostCallReceipt* out_receipt);
uint32_t flark_v3_host_acknowledge_inline_sidecar_delivery(
    FlarkV3HostHandle handle,
    const FlarkV3HostInlineSidecarAck* ack,
    FlarkV3HostCallReceipt* out_receipt);
uint32_t flark_v3_host_acknowledge_viewport_presentation_delivery(
    FlarkV3HostHandle handle,
    const FlarkV3HostViewportPresentationAck* ack,
    FlarkV3HostCallReceipt* out_receipt);
/* Authors FLKVP001 bytes directly from the installed host root. The request
 * and receipt remain stable when the current fixed M1.1 lookup is replaced by
 * a multi-record point index. output may be null only when capacity is zero;
 * query, output, and receipt ranges must be pairwise disjoint. */
uint32_t flark_v3_host_query_structural(
    FlarkV3HostHandle handle,
    const FlarkV3HostPointQuery* query,
    uint8_t* output,
    uint32_t capacity,
    FlarkV3HostPointQueryReceipt* out_receipt);
uint32_t flark_v3_host_query_structural_range(
    FlarkV3HostHandle handle,
    const FlarkV3HostBlockRangeQuery* query,
    uint8_t* output,
    uint32_t capacity,
    FlarkV3HostBlockRangeQueryReceipt* out_receipt);
uint32_t flark_v3_host_query_structural_ordinal_window(
    FlarkV3HostHandle handle,
    const FlarkV3HostStructuralOrdinalWindowQuery* query,
    FlarkV3HostStructuralOrdinalWindowQueryReceipt* out_receipt);
uint32_t flark_v3_host_query_inline_sidecar(
    FlarkV3HostHandle handle,
    const FlarkV3HostInlineSidecarQuery* query,
    uint8_t* output,
    uint32_t capacity,
    FlarkV3HostInlineSidecarQueryReceipt* out_receipt);
/* Copies one exact installed FLKVP001 aggregate page into caller-owned output.
 * query, output, and receipt ranges must be pairwise disjoint. A too-small
 * output returns QUERY_BOUND_EXCEEDED with zero encoded_bytes/entry_count. */
uint32_t flark_v3_host_query_viewport_presentation(
    FlarkV3HostHandle handle,
    const FlarkV3HostViewportPresentationQuery* query,
    uint8_t* output,
    uint32_t capacity,
    FlarkV3HostViewportPresentationQueryReceipt* out_receipt);
/* Begins bounded retirement. Continue flark_v3_host_poll until CLOSED. Then
 * detach the finalizer, prove host_remove (or emergency_destroy) succeeded,
 * and only then release its token; reattach on reclamation failure. */
uint32_t flark_v3_host_close(
    FlarkV3HostHandle handle,
    FlarkV3HostCallReceipt* out_receipt);
uint32_t flark_v3_host_remove(FlarkV3HostHandle handle);
uint32_t flark_v3_host_emergency_destroy(FlarkV3HostHandle handle);
uint32_t flark_v3_host_finalizer_token_create(
    FlarkV3HostHandle handle,
    void** out_token);
uint32_t flark_v3_host_finalizer_token_release(void* token);
void flark_v3_host_emergency_finalize(void* token);