lib/src/v3/runtime/native/flark_v3_native_host_store.dart


  factory _NativeHostSymbols.fromLibrary(
    DynamicLibrary library,
  ) => _NativeHostSymbols(
    abiVersion: library.lookupFunction<_AbiVersionNative, _AbiVersionDart>(
      'flark_v3_host_native_abi_version',
    ),
    standardConfig: library
        .lookupFunction<_StandardConfigNative, _StandardConfigDart>(
          'flark_v3_host_config_standard',
        ),
    create: library.lookupFunction<_CreateNative, _CreateDart>(
      'flark_v3_host_create',
    ),
    observeSource: library
        .lookupFunction<_ObserveSourceNative, _ObserveSourceDart>(
          'flark_v3_host_observe_source',
        ),
    beginOffer: library.lookupFunction<_BeginOfferNative, _BeginOfferDart>(
      'flark_v3_host_begin_offer',
    ),
    beginInlineSidecarOffer: library
        .lookupFunction<
          _BeginInlineSidecarOfferNative,
          _BeginInlineSidecarOfferDart
        >('flark_v3_host_begin_inline_sidecar_offer'),
    beginViewportPresentationOffer: library
        .lookupFunction<
          _BeginViewportPresentationOfferNative,
          _BeginViewportPresentationOfferDart
        >('flark_v3_host_begin_viewport_presentation_offer'),
    beginReferencesDelta: library
        .lookupFunction<_BeginReferencesDeltaNative, _BeginReferencesDeltaDart>(
          'flark_v3_host_begin_references_delta',
        ),
    beginExactBaseDelta: library
        .lookupFunction<_BeginExactBaseDeltaNative, _BeginExactBaseDeltaDart>(
          'flark_v3_host_begin_exact_base_delta',
        ),
    admitPacket: library.lookupFunction<_AdmitPacketNative, _AdmitPacketDart>(
      'flark_v3_host_admit_packet',
    ),
    admitInlineSidecarPacket: library
        .lookupFunction<_AdmitPacketNative, _AdmitPacketDart>(
          'flark_v3_host_admit_inline_sidecar_packet',
        ),
    admitViewportPresentationPacket: library
        .lookupFunction<_AdmitPacketNative, _AdmitPacketDart>(
          'flark_v3_host_admit_viewport_presentation_packet',
        ),
    requestCommit: library.lookupFunction<_CommitNative, _CommitDart>(
      'flark_v3_host_request_commit',
    ),
    requestInlineSidecarCommit: library
        .lookupFunction<_CommitInlineSidecarNative, _CommitInlineSidecarDart>(
          'flark_v3_host_request_inline_sidecar_commit',
        ),
    requestViewportPresentationCommit: library
        .lookupFunction<
          _CommitViewportPresentationNative,
          _CommitViewportPresentationDart
        >('flark_v3_host_request_viewport_presentation_commit'),
    abortOffer: library.lookupFunction<_AbortNative, _AbortDart>(
      'flark_v3_host_abort_offer',
    ),
    abortInlineSidecarOffer: library.lookupFunction<_AbortNative, _AbortDart>(
      'flark_v3_host_abort_inline_sidecar_offer',
    ),
    abortViewportPresentationOffer: library
        .lookupFunction<_AbortNative, _AbortDart>(
          'flark_v3_host_abort_viewport_presentation_offer',
        ),
    poll: library.lookupFunction<_PollNative, _PollDart>('flark_v3_host_poll'),
    pollInlineSidecar: library
        .lookupFunction<_PollInlineSidecarNative, _PollInlineSidecarDart>(
          'flark_v3_host_poll_inline_sidecar',
        ),
    pollViewportPresentation: library
        .lookupFunction<
          _PollViewportPresentationNative,
          _PollViewportPresentationDart
        >('flark_v3_host_poll_viewport_presentation'),
    acknowledgeDelivery: library
        .lookupFunction<_AcknowledgeDeliveryNative, _AcknowledgeDeliveryDart>(
          'flark_v3_host_acknowledge_delivery',
        ),
    acknowledgeInlineSidecarDelivery: library
        .lookupFunction<
          _AcknowledgeInlineSidecarDeliveryNative,
          _AcknowledgeInlineSidecarDeliveryDart
        >('flark_v3_host_acknowledge_inline_sidecar_delivery'),
    acknowledgeViewportPresentationDelivery: library
        .lookupFunction<
          _AcknowledgeViewportPresentationDeliveryNative,
          _AcknowledgeViewportPresentationDeliveryDart
        >('flark_v3_host_acknowledge_viewport_presentation_delivery'),
    queryStructural: library
        .lookupFunction<_QueryStructuralNative, _QueryStructuralDart>(
          'flark_v3_host_query_structural',
        ),
    queryStructuralRange: library
        .lookupFunction<_QueryStructuralRangeNative, _QueryStructuralRangeDart>(
          'flark_v3_host_query_structural_range',
        ),
    queryStructuralOrdinalWindow: library
        .lookupFunction<
          _QueryStructuralOrdinalWindowNative,
          _QueryStructuralOrdinalWindowDart
        >('flark_v3_host_query_structural_ordinal_window'),
    queryInlineSidecar: library
        .lookupFunction<_QueryInlineSidecarNative, _QueryInlineSidecarDart>(
          'flark_v3_host_query_inline_sidecar',
        ),
    queryViewportPresentation: library
        .lookupFunction<
          _QueryViewportPresentationNative,
          _QueryViewportPresentationDart
        >('flark_v3_host_query_viewport_presentation'),
    close: library.lookupFunction<_CloseNative, _CloseDart>(
      'flark_v3_host_close',
    ),
    remove: library.lookupFunction<_DestroyNative, _DestroyDart>(
      'flark_v3_host_remove',
    ),
    emergencyDestroy: library.lookupFunction<_DestroyNative, _DestroyDart>(
      'flark_v3_host_emergency_destroy',
    ),
    finalizerTokenCreate: library
        .lookupFunction<_FinalizerTokenCreateNative, _FinalizerTokenCreateDart>(
          'flark_v3_host_finalizer_token_create',
        ),
    finalizerTokenRelease: library
        .lookupFunction<
          _FinalizerTokenReleaseNative,
          _FinalizerTokenReleaseDart
        >('flark_v3_host_finalizer_token_release'),
    emergencyFinalize: library
        .lookup<NativeFunction<Void Function(Pointer<Void>)>>(
          'flark_v3_host_emergency_finalize',
        ),
  );

  final _AbiVersionDart abiVersion;
  final _StandardConfigDart standardConfig;
  final _CreateDart create;
  final _ObserveSourceDart observeSource;
  final _BeginOfferDart beginOffer;
  final _BeginInlineSidecarOfferDart beginInlineSidecarOffer;
  final _BeginViewportPresentationOfferDart beginViewportPresentationOffer;
  final _BeginReferencesDeltaDart beginReferencesDelta;
  final _BeginExactBaseDeltaDart beginExactBaseDelta;
  final _AdmitPacketDart admitPacket;
  final _AdmitPacketDart admitInlineSidecarPacket;
  final _AdmitPacketDart admitViewportPresentationPacket;
  final _CommitDart requestCommit;
  final _CommitInlineSidecarDart requestInlineSidecarCommit;
  final _CommitViewportPresentationDart requestViewportPresentationCommit;
  final _AbortDart abortOffer;
  final _AbortDart abortInlineSidecarOffer;
  final _AbortDart abortViewportPresentationOffer;
  final _PollDart poll;
  final _PollInlineSidecarDart pollInlineSidecar;
  final _PollViewportPresentationDart pollViewportPresentation;
  final _AcknowledgeDeliveryDart acknowledgeDelivery;
  final _AcknowledgeInlineSidecarDeliveryDart acknowledgeInlineSidecarDelivery;
  final _AcknowledgeViewportPresentationDeliveryDart
  acknowledgeViewportPresentationDelivery;
  final _QueryStructuralDart queryStructural;
  final _QueryStructuralRangeDart queryStructuralRange;
  final _QueryStructuralOrdinalWindowDart queryStructuralOrdinalWindow;
  final _QueryInlineSidecarDart queryInlineSidecar;
  final _QueryViewportPresentationDart queryViewportPresentation;
  final _CloseDart close;
  final _DestroyDart remove;
  final _DestroyDart emergencyDestroy;
  final _FinalizerTokenCreateDart finalizerTokenCreate;
  final _FinalizerTokenReleaseDart finalizerTokenRelease;
  final Pointer<NativeFunction<Void Function(Pointer<Void>)>> emergencyFinalize;
}
